Change header connection and Makefile

--- a/Race03/Makefile
+++ b/Race03/Makefile
@@ -1,25 +1,17 @@
-NAME = matrix_rain
-
 SRCS = src/*.c
 INC = inc/*.h
 
 CFLAGS = -std=c11 -Wall -Wextra -Werror -Wpedantic -lncurses
-RM = rm -rf
 
 all: install clean
 
 install:
-	@cp $(SRCS) .
-	@cp $(INC) .
-	@clang $(CFLAGS) -o $(NAME) $(SRCS) -I inc
-	@printf "\r\33[2K$(NAME)\t \033[32;1mcreated\033[0m\n"
+	@clang $(CFLAGS) -o matrix_rain $(SRCS) -I inc
 
 clean:
-	@$(RM) *.h
-	@$(RM) *.c
+	@rm -rf inc/*.gch
 
 uninstall: clean
-	@$(RM) $(NAME)
-	@@printf "$(NAME)\t \033[31;1muninstalled\033[0m\n"
+	@rm -rf matrix_rain
 
-reinstall: uninstall clean all
+reinstall: uninstall all
